# link-worker

./: .dev.vars.example  .gitignore  Makefile  README.md  build.sh  pyproject.toml  wrangler.jsonc  wrangler.template.jsonc
src/: app.py  worker.py
src/link_shortener/: __init__.py  build.py  models.py  service.py
tests/: test_app.py  test_models.py  test_openapi.py  test_service.py
