[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "link"
version = "0.1.0"
description = "Cloudflare Workers shortlink service in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5; sys_platform != 'emscripten'",
    "pydantic>=2.0,<2.12.5; sys_platform == 'emscripten'",
]

[project.scripts]
build = "link_shortener.build:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "workers-py>=1.7.3",
    "workers-runtime-sdk>=0.3.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["link_shortener*"]
